<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pure List</string>
    <string name="none">null</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="options">Options</string>
    <string name="set_reminder">Set reminder</string>
    <string name="note_list_hint">Enter list name</string>
    <string name="note_hint">Enter item name</string>
    <string name="set_reminder_time">Set reminder time</string>
    <string name="reminder_on">Reminder on: </string>
    <string name="themes">Themes</string>
    <string name="tips">Tips and tricks</string>
    <string name="about">About</string>
    <string name="remove_ads">Remove ads</string>
    <string name="loading">Loading..</string>
    <string name="no_tasks">No tasks yet</string>

    <string name="default_list_name">Default list</string>
    <string name="tips_list_name">Tips</string>
    <string name="tip_add">Add items by pressing \"Add\"</string>
    <string name="tip_edit">Edit items by pressing them</string>
    <string name="tip_edit_lists">You can edit lists by pressing the counter</string>
    <string name="tip_delete">Delete items by swiping them left</string>
    <string name="tip_complete">Mark items done by swiping them right</string>
    <string name="tip_move">Long-press items and move them around</string>
    <string name="tip_reminder">Set reminders for important items</string>

    <string name="tip_header">Did you know that you can:</string>

    <string name="about_version" translatable="false">Version 1.0.11</string>
    <string name="about_copyright" translatable="false">Copyright Bearson Software 2015. All rights reserved.</string>
    <string name="about_website" translatable="false">Website: http://bearsonsoftware.com</string>
    <string name="about_contact">For any questions or suggestions, email us at:</string>
    <string name="about_email" translatable="false">sales@bearsonsoftware.com</string>

    <string name="theme_default">Default</string>
    <string name="theme_forest">Forest</string>
    <string name="theme_princess">Princess</string>
    <string name="theme_sunset">Sunset</string>
    <string name="theme_iris">Iris</string>

    <string name="banner_ad_unit_id">ca-app-pub-9300731596672962/5645531130</string>

</resources>
