<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@null"
        android:textSize="@dimen/list_name_text_size"
        android:textStyle="normal"
        android:clickable="false"
        android:id="@+id/textViewListName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
        android:id="@+id/noteView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:divider="@null"
        android:layout_below="@+id/textViewListName"
        android:layout_above="@+id/adView" />

    <com.google.android.gms.ads.AdView android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:adSize="BANNER"
        android:layout_above="@+id/buttonsLayoutNote"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/buttonsLayoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/buttonBackNote"
            android:onClick="onClick"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonAddNote"
            android:onClick="onClick"/>
    </LinearLayout>

    <!--invisible layout containing controls to add new items -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/noteNewItem"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@null"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="vertical"
            android:id="@+id/noteEdit">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="100">
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:layout_height="50dp"
                    android:hint="@string/note_hint"
                    android:id="@+id/noteEditText"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="16dp"
                    android:inputType="text|textAutoCorrect|textCapSentences"
                    android:imeOptions="actionGo"
                    android:singleLine="true"
                    android:maxLength="50"> <requestFocus />
                </EditText>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="15"
                    android:layout_height="50dp"
                    android:onClick="onClick"
                    android:drawableLeft="@drawable/ic_action_new"
                    android:id="@+id/noteSaveButton"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/set_reminder"
                android:id="@+id/setReminderButton"
                android:onClick="onClick"
                android:textSize="@dimen/reminder_button_text_size"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/noteNewBackground"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="onClick"
            android:background="@null">
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>