<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TaskList"
    android:id="@+id/noteListActivity">
    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
        android:id="@+id/noteListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:divider="@null"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/buttonsLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:id="@+id/buttonOptions"
            android:onClick="onClick"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonAdd"
            android:onClick="onClick"/>


    </LinearLayout>

    <!--invisible layout containing controls to add new items -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/noteListNewItem"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="100"
            android:id="@+id/noteListNewRow">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="85"
                android:layout_height="50dp"
                android:hint="@string/note_list_hint"
                android:id="@+id/noteListEditText"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:gravity="left|center_vertical"
                android:paddingLeft="16dp"
                android:inputType="text|textAutoCorrect|textCapSentences"
                android:imeOptions="actionGo"
                android:singleLine="true"
                android:maxLength="35"> <requestFocus />
            </EditText>

            <Button
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="50dp"
                android:onClick="onClick"
                android:drawableLeft="@drawable/ic_action_accept"
                android:id="@+id/noteListSaveButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/noteListNewBackground"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="onClick"
            android:background="@null">

        </LinearLayout>
    </LinearLayout>

    <!--invisible layout containing controls to change items -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/noteListChangeItem"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="100"
            android:id="@+id/noteListChangeRow">
            <EditText
                android:layout_width="0dp"
                android:layout_weight="85"
                android:layout_height="50dp"
                android:hint="@string/note_list_hint"
                android:id="@+id/noteListChangeEditText"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:gravity="left|center_vertical"
                android:paddingLeft="16dp"
                android:inputType="text|textAutoCorrect|textCapSentences"
                android:imeOptions="actionGo"
                android:singleLine="true"
                android:maxLength="35"> <requestFocus />
            </EditText>

            <Button
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="50dp"
                android:onClick="onClick"
                android:drawableLeft="@drawable/ic_action_accept"
                android:id="@+id/noteListChangeButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/noteListChangeBackground"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="onClick"
            android:background="@null">

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
